2006-01-23  Darin Adler  <darin@apple.com>

        Suggested by Anders.

        - test for http://bugzilla.opendarwin.org/show_bug.cgi?id=6617
          REGRESSION: Crash in cloneChildNodes when clicking element

        * fast/dom/clone-node-form-elements-with-attr.html: Added.
        * fast/dom/clone-node-form-elements-with-attr-expected.txt: Added.

2006-01-23  David Harrison  <harrison@apple.com>

        <rdar://problem/4026906> Paste of HTML table content can break table structure

        * editing/pasteboard/paste-4039777-fix-expected.checksum: Added.
        * editing/pasteboard/paste-4039777-fix-expected.png: Added.
        * editing/pasteboard/paste-4039777-fix-expected.txt: Added.
        * editing/pasteboard/paste-4039777-fix.html: Added.

2006-01-22  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - test for http://bugzilla.opendarwin.org/show_bug.cgi?id=5731
          Form element as display table-cell hangs Safari (will eventually crash)

        * fast/table/form-with-table-style.html: Added.
        * fast/table/form-with-table-style-expected.txt: Added.
        * fast/table/form-with-table-style-expected.png: Added.
        * fast/table/form-with-table-style-expected.checksum: Added.

2006-01-22  David Kilzer  <ddkilzer@kilzer.net>

        Reviewed by Maciej.

        - test for http://bugzilla.opendarwin.org/show_bug.cgi?id=5656
        REGRESSION: Buttons on Yahoo! Mail misplaced in ToT
        <rdar://problem/4404335>
        Tests whether white-space mode on buttons is inherited and not forced.

        * fast/forms/button-white-space-expected.checksum: Added.
        * fast/forms/button-white-space-expected.png: Added.
        * fast/forms/button-white-space-expected.txt: Added.
        * fast/forms/button-white-space.html: Added.

2006-01-22  Eric Seidel  <eseidel@apple.com>

        Reviewed by darin.

        SVG needs to support "evt" instead of "event" in event handlers.