@@ -1,0 +1,6 @@
+<html>
+ <frameset border="1" cols="500,*" style='border: solid 1px;'>
+  <frame marginwidth="1" src="frame-element-name-left.html" name='left'>
+  <frame src="resources/frame-element-name-right.html">
+ </frameset>
+</html>
